--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,10 @@
         "yiisoft/yii2": "dev-master"
     },
     "autoload": {
-        "files": ["vendor/yiisoft/yii2/framework/yii.php"]
+        "psr-0": {
+            "yii\\": "vendor/yiisoft/yii2",
+            "app\\": ""
+        },
+        "classmap": ["vendor/yiisoft/yii2/yii/Yii.php"]
     }
 }
